# fimm-project

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/requests/: post_data.rest
backend/src/: main.py
backend/src/util/: analyze_data.py  validation.py
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/videos/: analysis_settings.webm  search_select.webm  zoom_pan_select_guide.webm
frontend/src/: App.tsx  BackGround.css  MuiTheme.tsx  constants.ts  main.tsx  types.ts
frontend/src/components/: AnalysisModeSelect.tsx  ColumnSelect.tsx  ContactPage.tsx  CustomToolbar.tsx  DimRedMethodSelect.tsx  DisplayData.tsx  DrawPlot.tsx  FileSelect.tsx  FileUpload.tsx  FingerPrintTypeSelect.tsx  HeaderBar.tsx  HomePage.tsx  InteractivePlot.tsx  LabelColumnSelect.tsx  LabelTypeSelect.tsx  MoleculeInfo.tsx  NavBar.tsx  PlotSkeleton.tsx  RemoveOutliersSelect.tsx  SearchToolbar.tsx  SelectExampleData.tsx  SelectFile.tsx  SimilaritySearch.tsx  SimilaritySearchResult.tsx  SimilaritySearchSettings.tsx  SmilesColumnSelect.tsx  UploadFile.tsx  UserGuide.tsx  VantaBackground.tsx  VisualizationSettings.tsx
frontend/src/components/icons/: CameraIcon.tsx  PanIcon.tsx
frontend/src/data/: BBBP_sample.csv  example_data_BBB.csv
frontend/src/services/: chemblApi.ts  data.ts  pubChemApi.ts
frontend/src/util/: colorUtil.tsx  svgUtil.tsx
