[project]
name = "fimm-project-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ville Davidsson",email = "ville.d@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
